# teams-cli

./: .gitignore  .releaserc.json  CLAUDE.md  LICENSE  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SECURITY.md
skills/teams-cli/: SKILL.md
src/: api.ts  auth.ts  cli.ts  client.ts  config.ts  formatting.ts  index.ts
src/teams_cli/: __init__.py  api.py  auth.py  cli.py  client.py  config.py  formatting.py
tests/: api.test.ts  auth.test.ts  cli.test.ts  conftest.py  formatting.test.ts  test_api.py  test_auth.py  test_cli.py  test_formatting.py
