[project]
name = "teams-cli"
version = "0.1.0"
description = "CLI for Microsoft Teams using the internal chat service API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "playwright>=1.52",
    "rich>=13.0",
]

[project.scripts]
teams = "teams_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26",
    "pytest-httpx>=0.35",
    "ruff>=0.11",
]
